--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.29.0"
   }
 }
